# onpoint-ai

./: .editorconfig  .gitignore  CLAUDE.md  docker-compose.yml
ai-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
ai-service/app/: config.py  logging_setup.py  main.py  routing.py  schemas.py
ai-service/app/learning/: README.md
ai-service/app/models/: README.md
ai-service/app/pipeline/: _common.py  chatbot.py  classifier.py  matcher.py  orchestrator.py  priority.py  recommender.py  router.py  satisfaction.py  sentiment.py
ai-service/app/pipeline/prompts/: README.md
ai-service/app/pipeline/prompts/classifier/: v1.txt
ai-service/app/pipeline/prompts/priority/: v1.txt
ai-service/app/pipeline/prompts/router/: v1.txt
ai-service/app/pipeline/prompts/sentiment/: v1.txt
ai-service/app/providers/: anthropic_provider.py  base.py  openai_provider.py  rule_based.py
ai-service/tests/: conftest.py  test_classifier.py  test_health.py  test_orchestrator.py  test_priority.py  test_provider_fallback.py  test_router.py  test_routing_split.py  test_sentiment.py
backend/: OnPoint.sln  stop-api.ps1  verify-phase6-departments.ps1
backend/src/OnPoint.API/: OnPoint.API.csproj  OnPoint.API.http  (+3 more)
database/: 02-DATABASE-SCHEMA.sql
database/migrations/: 0002_ai_predictions.sql  0003_issue_ai_fields.sql  README.md
docs/: 01-ARCHITECTURE.md  03-API-ENDPOINTS.md  04-SIGNALR-EVENTS.md  05-BACKEND-STRUCTURE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
(+110 files in other folders)
